# OptimizedLLMDeploymenta

./: .replit  Pasted-Comprehensive-Advanced-Implementation-Guide-1-Optimizing-Local-LLM-Deployment-a-Hardware-Utiliza-1728723237465.txt  README.md  app.py  config.py  git_handler.py  llm_handler.py  llm_integration.py  main.py  models.py  pyproject.toml  replit.nix  requirements.txt  streamlit_app.py  utils.py
advanced_code_generator_chatbot/: Cargo.toml  build.rs
advanced_code_generator_chatbot/src/: main.rs
app/: llm.proto  llm_pb2.py  llm_pb2_grpc.py  llm_service.py  main.py
static/css/: custom.css
static/js/: main.js
templates/: base.html  index.html
